feat(api/frontend): update stats logic
